syntax = "proto3";

package segments;

// contains a single segment's data and its metadata
message Segment
{
    uint32 sequence_num = 1;
    
}

// contains a list of segments and their shared metadata
message SegmentsFrame
{
    uint32 num_segments = 2;
    string data_type = 3;
    repeated Segment segments = 6;
}